--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,117 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+
+    font-family: 'Courier New', Courier, monospace;
+    -webkit-font-smoothing: antialiased;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    background: linear-gradient(-90deg, #dacc32, #ea1667, #03a3dd, #12931b);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+    height: 100vh;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+.App {
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.card {
+    background: white;
+    padding: 3rem 5rem;
+    border-radius: 2rem;
+}
+
+.image {
+    width: 100%;
+    transition: transform .2s;
+}
+
+.image:hover {
+    transform: scale(1.1);
+}
+
+.card p {
+    line-height: 150%;
+    overflow-wrap: break-word;
+}
+
+.expand {
+    max-width: 20rem;
+    display: flex;
+    flex-direction: column;
+    align-content: stretch;
+    align-items: center;
+    text-align: justify;
+    text-justify: inter-word;
+}
+
+.strongText {
+    font-weight: 700;
+    font-size: 1.5rem;
+}
+
+.heading {
+    font-size: 1.7rem;
+}
+
+button {
+    width: 10rem;
+    background: #86ff4e;
+    color: #000;
+    border: 1px;
+    border-color: #000;
+    margin-top: 0;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    border-radius: 4px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    cursor: pointer;
+    -webkit-transition-duration: .2s;
+    transition-duration: .2s;
+    height: 75px;
+    font-weight: 700;
+    font-size: 1.3rem;
+}
+
+.button {
+    padding-top: 2rem;
+}
+
+.basket {
+    transition: opacity 0.5s;
+    opacity: 1;
+}
+
+.basket.hide {
+    opacity: 0;
+    pointer-events: none;
+}
+
+.textChange {
+    height: 10rem;
 }
